# rust-blog

./: Cargo.toml  README.md  index.html  tailwind.config.js  tailwind.css
src/app/: about.rs  blog.rs  home.rs  mod.rs
src/components/: nav.rs
