[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2021"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1"
reqwest = { version = "0.12", features = ["json"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
gloo-utils = "0.2"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = [
    "Navigator", 
    "Clipboard", 
    "Window",
    "HtmlElement",
    "Document"
]}
wasm-bindgen-futures = "0.4"
markdown = "1.0.0-alpha.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"
